--- a/requirements.txt
+++ b/requirements.txt
@@ -74,8 +74,8 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
-pywin32==304
-pywinpty==2.0.5
+# pywin32==304
+# pywinpty==2.0.5
 pyzmq==22.3.0
 requests==2.27.1
 rsa==4.8
